# lachrymose

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/: main.c
include/: lachrymose.h
src/: framebuffer.c  framebuffer.h  gl.h  llu.c  llu.h  lms.c  lms.h  mesh.c  mesh.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  window.c  window.h
